<resources>
    <string name="app_name">modoohealing</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btnKatalk">카카오톡으로 시작하기</string>
    <string name="sigin_up">간편 무료회원가입</string>
    <string name="signup">간편 무료회원가입</string>
    <string name="title_login">모두의 인연</string>

    <string name="naver_client_id">UkWpZyoejIUgknOaRGb3</string>
    <string name="naver_client_secret">9IfQSLe_9n</string>
    <string name="naver_app_name">모두의 인연</string>
    <string name="txt_signup">모두의 인연 회원가입</string>
    <string name="signcondent">⚡︎이메일은 비밀번호 찾기시에 이용됩니다.</string>
    <string name="pw">비밀번호</string>
    <string name="pwhint">영어와 숫자로 조합 가능(4~12자)</string>
    <string name="pwhintre">비밀번호를 재입력해주세요.</string>
    <string name="nickname">대화명</string>
    <string name="txtgender">성별</string>
    <string name="nickname_hint">한글과 숫자로 조합 가능(2~8자)</string>
    <string name="txtman">남성</string>
    <string name="txtwoman">여성</string>
    <string name="birth_year">태어난 연도</string>
    <string name="txtEmailErrorMsg">이메일주소를 입력해주세요.</string>
    <string name="txtNicknameErrorMSG">한글 숫자 조합 2~8자로된 대화명을 입력해주세요.</string>
    <string name="txt_termofuse_error_msg">이용약관 및 개인정보 정책에 동의해주세요.</string>
    <string name="txt_bottom_home_title">홈</string>
    <string name="txt_bottom_users_title">맞선회원</string>
    <string name="bottom_mypage_title">마이페이지</string>
    <string name="e">E</string>
    <string name="pw_hint">비밀번호를 입력해주세요.</string>
    <string name="email_hint">이메일을 입력해주세요.</string>


</resources>
